--- a/MGui/MGui.csproj
+++ b/MGui/MGui.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Controls\InputBox.Designer.cs">
       <DependentUpon>InputBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Datatypes\EquivalencePool.cs" />
+    <Compile Include="Datatypes\HashedArray.cs" />
     <Compile Include="Datatypes\IniSerialiser.cs" />
     <Compile Include="Datatypes\SettableInfo.cs" />
     <Compile Include="Datatypes\Spreadsheet.cs" />
@@ -84,6 +86,7 @@
     <Compile Include="Datatypes\PropertyPath.cs" />
     <Compile Include="Helpers\EnumHelper.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Helpers\IntHelper.cs" />
     <Compile Include="Helpers\ListBoxHelper.cs" />
     <Compile Include="Helpers\WeakReferenceHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
