--- a/MGui/MGui.csproj
+++ b/MGui/MGui.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Controls\AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CtlBuffer.cs" />
     <Compile Include="Controls\CtlFileSelector.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -65,6 +66,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Controls\CtlTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\CtlImageViewer.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Datatypes\Binders.cs" />
@@ -112,6 +116,8 @@
     <Compile Include="Helpers\FormHelper.cs" />
     <Compile Include="Helpers\IntHelper.cs" />
     <Compile Include="Helpers\ListBoxHelper.cs" />
+    <Compile Include="Helpers\ListViewHelper.cs" />
+    <Compile Include="Helpers\SerialiserHelper.cs" />
     <Compile Include="Helpers\WeakReferenceHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
