* Fixed version number updating so if the utility is not available the project can still be built

--- a/MGui/MGui.csproj
+++ b/MGui/MGui.csproj
@@ -164,6 +164,10 @@
     <None Include="Resources\Open_6529.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>UpdateVersionNumber.exe "$(ProjectDir)Properties\AssemblyInfo.cs"
+EXIT 0</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
