--- a/MGui/MGui.csproj
+++ b/MGui/MGui.csproj
@@ -103,7 +103,6 @@
     <Compile Include="Datatypes\SwitchException.cs" />
     <Compile Include="Datatypes\Union.cs" />
     <Compile Include="Helpers\ArrayHelper.cs" />
-    <Compile Include="Helpers\BitmapDataHelper%28TEMPORARY%29.cs" />
     <Compile Include="Helpers\ColourHelper.cs" />
     <Compile Include="Controls\CtlBinder.cs">
       <SubType>Component</SubType>
@@ -122,7 +121,6 @@
     <Compile Include="Helpers\FormHelper.cs" />
     <Compile Include="Helpers\ImageHelper.cs" />
     <Compile Include="Helpers\ImageListHelper.cs" />
-    <Compile Include="Helpers\ImageListHelper%28TEMPORARY%29.cs" />
     <Compile Include="Helpers\IntHelper.cs" />
     <Compile Include="Helpers\ListBoxHelper.cs" />
     <Compile Include="Helpers\ListViewHelper.cs" />
@@ -171,6 +169,10 @@
   <PropertyGroup>
     <PreBuildEvent>UpdateVersionNumber.exe "$(ProjectDir)Properties\AssemblyInfo.cs"
 EXIT 0</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>UpdateVersionNumber.exe /r "$(ProjectDir)Properties\AssemblyInfo.cs"
+EXIT 0</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
