--- a/MGui/MGui.csproj
+++ b/MGui/MGui.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Controls\InputBox.Designer.cs">
       <DependentUpon>InputBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="Datatypes\RangeD.cs" />
     <Compile Include="Helpers\BitmapDataHelper.cs" />
     <Compile Include="Datatypes\Counter.cs" />
     <Compile Include="Datatypes\EquivalencePool.cs" />
