added control helper fixed bug (previous commit)

--- a/MGui/MGui.csproj
+++ b/MGui/MGui.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Datatypes\EErrorHandler.cs" />
     <Compile Include="Datatypes\PropertyPath.cs" />
+    <Compile Include="Helpers\ControlHelper.cs" />
     <Compile Include="Helpers\DebugHelper.cs" />
     <Compile Include="Helpers\EnumHelper.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
